Add Ingredients list

--- a/recipes/bacalhau.html
+++ b/recipes/bacalhau.html
@@ -18,5 +18,16 @@
     <p>
         In this recipe you will learn the 5 quick steps to make this awesome dish.
     </p>
+    <h3>Ingredients</h3>
+    <p>
+        <ul>
+            <li>Cod</li>
+            <li>Potatos</li>
+            <li>Olives</li>
+            <li>Onions</li>
+            <li>Peppers</li>
+            <li>Olive oil</li>
+        </ul>
+    </p>
 </body>
 </html>
