--- a/recipes/bacalhau.html
+++ b/recipes/bacalhau.html
@@ -29,5 +29,15 @@
             <li>Olive oil</li>
         </ul>
     </p>
+    <h3>Steps</h3>
+    <p>
+        <ol>
+            <li>Oven at 175ºC Celsius</li>
+            <li>Chop everything but the Cod</li>
+            <li>Put everything in a board with a lot of olive oil</li>
+            <li>Put the cod on the top of the board</li>
+            <li>It goes to the oven during 20 minutes</li>
+        </ul>
+    </p>
 </body>
 </html>
