--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -18,5 +18,23 @@
     <p>
         In this recipe you will learn everything you need to be <strong><em>el rei de la fiesta</em></strong>!
     </p>
+    <h3>Ingredients</h3>
+    <p>
+        <ul>
+            <li>Fajitas</li>
+            <li>Chiken</li>
+            <li>Everything you can imagine</li>
+            <li>Guacamole</li>
+        </ul>
+    </p>
+    <h3>Steps</h3>
+    <p>
+        <ol>
+            <li>Take one fajita</li>
+            <li>Spread some Guacamole</li>
+            <li>Put everything you want inside the fajita</li>
+            <li>Have fun!</li>
+        </ul>
+    </p>
 </body>
 </html>
