Add link to Tacos

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/bacalhau.html">Bacalhau</a>
+    <a href="recipes/tacos.html">Tacos Locos</a>
 </body>
 </html>
