Add links to homepage

--- a/recipes/bacalhau.html
+++ b/recipes/bacalhau.html
@@ -37,7 +37,13 @@
             <li>Put everything in a board with a lot of olive oil</li>
             <li>Put the cod on the top of the board</li>
             <li>It goes to the oven during 20 minutes</li>
-        </ul>
+        </ol>
+    </p>
+    <p>
+        <p>
+        <a href="bacalhau.html"><h4>Back To Top</h4></a>
+        <a href="../index.html"><h4>Back To Main Menu</h4></a>
+        </p>
     </p>
 </body>
 </html>
