Add homepage image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Random Recipes</h1>
-    <a href="recipes/bacalhau.html">Bacalhau</a>
-    <a href="recipes/tacos.html">Tacos Locos</a>
+    <img src="https://www.askideas.com/media/15/Amazing-Vegetables-Face-Funny-Picture.jpeg" alt="Face built with vegetables" width="500">
+
+    <p><a href="recipes/bacalhau.html">Bacalhau</a></p>
+    <p><a href="recipes/tacos.html">Tacos Locos</a></p>
+   
 </body>
 </html>
