--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Random Recipes</h1>
     <img src="https://www.askideas.com/media/15/Amazing-Vegetables-Face-Funny-Picture.jpeg" alt="Face built with vegetables" width="500">
 
+    <h2>Our lazy choice:</h2>
     <p><a href="recipes/bacalhau.html">Bacalhau</a></p>
     <p><a href="recipes/tacos.html">Tacos Locos</a></p>
    
