--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <img src="https://www.askideas.com/media/15/Amazing-Vegetables-Face-Funny-Picture.jpeg" alt="Face built with vegetables" width="500">
 
     <h2>Our lazy choice:</h2>
-    <p><a href="recipes/bacalhau.html">Bacalhau</a></p>
-    <p><a href="recipes/tacos.html">Tacos Locos</a></p>
-   
+    <ul>
+        <li><a href="recipes/bacalhau.html">Bacalhau</a></li>
+        <li><a href="recipes/tacos.html">Tacos Locos</a></p></li>
+    </ul>
 </body>
 </html>
